# quarters

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/quarters/: __init__.py  quarter.py
tests/: test_quarter.py
