[metadata]
name = quarters
version = 0.1.0
author = Kim Bahir Andersen
author_email = kim@proficio.dk
description = Utilities for working with quarters as dates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kimbahir/quarters
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = ">=3.11"

[options.packages.find]
where = src
