[metadata]
name = quarters
version = 0.1.0
author = Kim Bahir Andersen
author_email = kim@proficio.dk
description = Utilities for working with quarters as dates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kimbahir/quarters
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: 3.15
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
license_files = LICENSE

[options]
package_dir =
    = src

[options.packages.find]
where = src
